further changes made to media queries to smooth transition on screen resizing - display none set on navbar inplace of visible:hidden to stop nav-bar div resizing so dramitically based on view port - logo added - shadow added to navbar but will most likely be removed and at the very least will need a significant rework in order to make initial release

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
 
-.logo {}
+.body {
+    margin-left: 0;
+    margin-right: 0;
+}
 
 .container {
-    margin: 5%;
-
+    margin: 1%;
 }
 
 .heading {
@@ -34,12 +36,20 @@
     .heading {
         font-size: 200%;
     }
+
+    .heading-banner {
+        padding-left: 5%;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .heading {
-        font-size: 300%;
+        font-size: 250%;
+    }
+
+    .heading-banner {
+        padding-left: 5%;
     }
 }
 
