--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
 
+
+.logo {
+    height: 4rem;
+    padding-top: 0.15%;
+    padding-left: 0.5%;
+}
+
 .navbar-container {
 
     width: 100%;
     height: 5%;
     display: flex;
     justify-content: space-between;
+    box-shadow: 0 10px 15px green;
 
 }
 
@@ -29,14 +37,14 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .navlinks {
-        visibility: hidden;
+        display: none;
     }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .navlinks {
-        visibility: hidden;
+        display: none;
     }
 }
 
